--- a/libs/share-styles/src/styles/shares/card.scss
+++ b/libs/share-styles/src/styles/shares/card.scss
@@ -30,15 +30,32 @@
 }
 
 .card-01-wrap {
-  border: 1px solid var(--border-color-default);
+  border: 1px solid #ddd;
   border-radius: var(--border-radius-default);
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  overflow: hidden;
+  margin-bottom: 4px;
 }
 
 .card-list {
   height: 100%;
   display: flex;
   flex-direction: column;
+
+  &__header {
+    padding: 8px 12px;
+    border: 1px solid var(--border-color-default);
+    border-radius: var(--border-radius-default);
+    font-weight: 500;
+    background-color: var(--background-color-secondary);
+    position: sticky;
+    top: -18px;
+    z-index: 2;
+
+    .name {
+      padding-left: 24px;
+    }
+  }
 
   .cdk-drop-list-dragging {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
