--- a/apps/mix-cms/src/app/pages/portal/database/components/database-relationship/database-relationship.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/components/database-relationship/database-relationship.component.html
@@ -20,6 +20,7 @@
       *ngFor="let item of relationships"
       cdkDrag
       [cdkDragData]="item"
+      [value]="item"
     >
     </mix-database-relationship-record>
   </div>
