--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
@@ -75,7 +75,7 @@
               <span class="mix-icon"> settings </span>&nbsp; Columns Design
             </button>
             <button tuiTab>
-              <span class="mix-icon"> settings </span>&nbsp; Relationships
+              <span class="mix-icon"> share </span>&nbsp; Relationships
             </button>
           </nav>
         </div>
