--- a/libs/mix-ui/src/input/input.component.html
+++ b/libs/mix-ui/src/input/input.component.html
@@ -1,16 +1,16 @@
-<tui-input [formControl]="control"
-           [tuiTextfieldCleaner]="closable"
-           [tuiTextfieldIconLeft]="searchIcon ? 'tuiIconSearchLarge' : undefined"
-           [tuiTextfieldLabelOutside]="!floatingLabel"
-           [tuiTextfieldSize]="'m'">
+<tui-input
+  [formControl]="control"
+  [tuiTextfieldCleaner]="closable"
+  [tuiTextfieldIconLeft]="searchIcon ? 'tuiIconSearchLarge' : undefined"
+  [tuiTextfieldLabelOutside]="!floatingLabel"
+  [tuiTextfieldSize]="size"
+>
   {{ placeHolder }}
-  <input [autocomplete]="autocomplete"
-         [id]="id"
-         [name]="name"
-         [type]="type"
-         tuiTextfield>
+  <input
+    [autocomplete]="autocomplete"
+    [id]="id"
+    [name]="name"
+    [type]="type"
+    tuiTextfield
+  />
 </tui-input>
-
-<!-- <input class="block mt-2 w-full placeholder-gray-400/70 dark:placeholder-gray-500 rounded-lg border border-red-400 bg-white px-5 py-2.5 text-gray-700 focus:border-red-400 focus:outline-none focus:ring focus:ring-red-300 focus:ring-opacity-40 dark:border-red-400 dark:bg-gray-900 dark:text-gray-300 dark:focus:border-red-300"
-       type="text"
-       placeholder="John Doe"> -->
