--- a/apps/mix-cms/src/app/pages/portal/database/components/relationship-record/database-relationship-record.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/components/relationship-record/database-relationship-record.component.html
@@ -2,7 +2,7 @@
   <div class="card-01">
     <div class="row">
       <div class="col-4 d-flex align-items-center gap-2">
-        <span class="mix-icon cursor-grab">drag_indicator</span>
+        <ng-content></ng-content>
 
         <mix-input
           placeHolder="Display name"
@@ -16,7 +16,7 @@
           [items]="allDatabaseIds"
           [labelProcess]="labelProcess"
           placeHolder="Choose database"
-          formControlName="parentId"
+          formControlName="childId"
         ></mix-select>
       </div>
 
@@ -26,7 +26,11 @@
     </div>
 
     <div class="card-01__action">
-      <mix-button type="danger" [iconBtn]="true" size="s"
+      <mix-button
+        type="danger"
+        [iconBtn]="true"
+        size="s"
+        (click)="delete.emit()"
         ><span class="mix-icon"> delete </span></mix-button
       >
     </div>
