--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
@@ -18,34 +18,7 @@
     >
       <div class="data-detail-page__toolbar">
         <div class="data-detail-page__toolbar-top">
-          <span
-            class="data-detail-page__input-title"
-            [class.--empty]="!form.controls.displayName.value"
-          >
-            <tui-input-inline
-              *ngIf="editTitle; else text"
-              (focusedChange)="onFocusedChange($event)"
-              tuiAutoFocus
-              (keydown.esc.prevent)="toggleEditTitle()"
-              (keydown.enter.prevent)="toggleEditTitle()"
-              formControlName="displayName"
-            >
-              Type db name
-            </tui-input-inline>
-
-            <ng-template #text>
-              <span>{{
-                form.controls.displayName.value || 'Type db name'
-              }}</span>
-              <mix-button
-                type="flat"
-                [iconBtn]="true"
-                [size]="'s'"
-                (click)="toggleEditTitle()"
-                ><span class="mix-icon">edit</span></mix-button
-              >
-            </ng-template>
-          </span>
+          <mix-inline-input formControlName="displayName"></mix-inline-input>
 
           <mix-button
             *ngIf="mode === 'update' && data"
@@ -72,7 +45,7 @@
               <span class="mix-icon"> feed </span>&nbsp; General
             </button>
             <button tuiTab>
-              <span class="mix-icon"> settings </span>&nbsp; Columns Design
+              <span class="mix-icon"> settings </span>&nbsp; Columns
             </button>
             <button tuiTab>
               <span class="mix-icon"> share </span>&nbsp; Relationships
@@ -86,53 +59,18 @@
 
       <div class="data-detail-page__content">
         <!-- Main Content -->
+        @defer(when activeTabIndex === 0) {
         <div
           class="data-detail-page__main-content"
           [class.d-none]="activeTabIndex !== 0"
         >
-          <p class="content-label mt-3">Display Name</p>
-          <mix-input
-            placeHolder="Your table friendly name"
-            formControlName="displayName"
-          ></mix-input>
-
-          <mix-form-error
-            class="mt-1"
-            formControlName="displayName"
-          ></mix-form-error>
-
-          <p class="content-label mt-3">System Name</p>
-          <div class="d-flex gap-1">
-            <mix-button
-              [iconBtn]="true"
-              [type]="'outline'"
-              (click)="updateSystemName(form.value.displayName || '')"
-              size="m"
-              ><span class="mix-icon">refresh</span></mix-button
-            >
-            <mix-input
-              placeHolder="Unique system name"
-              formControlName="systemName"
-            ></mix-input>
-          </div>
-
-          <mix-form-error
-            class="mt-1"
-            formControlName="systemName"
-          ></mix-form-error>
-
-          <p class="content-label mt-3">Short Description</p>
-          <mix-text-area
-            placeHolder="Description"
-            formControlName="description"
-          ></mix-text-area>
-
-          <div class="mt-3 notification --info">
-            Visit
-            <a href="https://docs.mixcore.org/" target="_blank">Here</a> to get
-            more information how Mixcore Database work.
-          </div>
+          <mix-database-info [form]="form"></mix-database-info>
         </div>
+        } @loading (after 100ms; minimum 1s) {
+        <div class="mix-progress-bar">
+          <div class="mix-progress-bar-value"></div>
+        </div>
+        }
 
         <!-- Columns -->
         @defer(when activeTabIndex === 1) {
