--- a/libs/share-styles/src/styles/shares/page-detail.scss
+++ b/libs/share-styles/src/styles/shares/page-detail.scss
@@ -100,9 +100,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
-    -webkit-box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
-    -moz-box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
+    box-shadow: 0px 4px 22px 0px #00000033;
   }
 
   &__content {
