--- a/libs/share-styles/src/styles/shares/page-list.scss
+++ b/libs/share-styles/src/styles/shares/page-list.scss
@@ -19,9 +19,7 @@
     width: 370px;
     display: flex;
     flex-direction: column;
-    box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
-    -webkit-box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
-    -moz-box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
+    box-shadow: 0px 4px 22px 0px #00000033;
 
     .filter-toggle {
       display: none;
@@ -71,15 +69,13 @@
     display: flex;
     flex-direction: column;
     background-color: var(--background-color-primary);
-    border-top-left-radius: 12px;
-    border-bottom-left-radius: 12px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
     border: 1px solid var(--border-color-default);
     overflow: hidden;
     flex-grow: 1;
     z-index: 1;
-    box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
-    -webkit-box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
-    -moz-box-shadow: 8px 2px 12px -1px rgba(0, 0, 0, 0.14);
+    box-shadow: 0px 4px 22px 0px #00000033;
   }
 
   &__detail-container {
