--- a/libs/share-styles/src/styles/ag-table.scss
+++ b/libs/share-styles/src/styles/ag-table.scss
@@ -9,7 +9,7 @@
   --ag-background-color: var(--background-color-primary);
   --ag-cell-horizontal-border: 1px solid var(--border-color-default);
   --ag-header-height: 32px;
-  --ag-row-height: 2.5rem;
+  --ag-row-height: 40px;
   --ag-row-hover-color: rgba(233, 234, 237, 0.5);
   --ag-font-size: inherit !important;
 }
