--- a/libs/mix-ui/src/select/select.component.html
+++ b/libs/mix-ui/src/select/select.component.html
@@ -4,6 +4,8 @@
   [stringify]="stringify"
   [tuiTextfieldLabelOutside]="true"
   [tuiTextfieldSize]="size"
+  [tuiDropdownLimitWidth]="'auto'"
+  [tuiDropdownAlign]="'left'"
 >
   {{ placeHolder }}
   <tui-data-list *tuiDataList>
