--- a/libs/share-styles/src/styles/font.scss
+++ b/libs/share-styles/src/styles/font.scss
@@ -62,10 +62,15 @@
   color: var(--form-error);
 }
 
+.text-white {
+  color: #fff;
+}
+
 .text-highlight {
+  --bg-color: var(--border-color-default);
   padding: 2px 6px;
   border-radius: 4px;
-  background-color: var(--border-color-default);
+  background-color: var(--bg-color);
   width: fit-content;
   font-weight: 500;
 }
