--- a/apps/mix-cms/src/app/pages/portal/database-data/components/custom-header/custom-header.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/components/custom-header/custom-header.component.html
@@ -1,55 +1,59 @@
 <div role="presentation">
   <div class="d-flex gap-2 align-items-center w-100">
-    <div *ngIf="params['dataType']"
-         class="text-highlight">
+    <div
+      *ngIf="params['dataType']"
+      class="text-highlight text-white"
+      [style.--bg-color]="dataTypeColors[params['dataType']]"
+    >
       {{ params['dataType'] }}
     </div>
 
-    <div *ngIf="params['displayName']"
-         class="header-title">
+    <div *ngIf="params['displayName']" class="header-title">
       {{ params['displayName'] }}
     </div>
 
     <ng-container *ngIf="params.columnType === 'value'">
-      <tui-hosted-dropdown #dropdown
-                           class="ms-auto"
-                           [content]="content"
-                           [tuiDropdownMaxHeight]="500">
-        <button type="button"
-                [icon]="arrow"
-                [pseudoHover]="dropdown.open || null"
-                [size]="'xs'"
-                tuiIconButton
-                appearance="flat"></button>
+      <tui-hosted-dropdown
+        #dropdown
+        class="ms-auto"
+        [content]="content"
+        [tuiDropdownMaxHeight]="500"
+      >
+        <button
+          type="button"
+          [icon]="arrow"
+          [pseudoHover]="dropdown.open || null"
+          [size]="'xs'"
+          tuiIconButton
+          appearance="flat"
+        ></button>
       </tui-hosted-dropdown>
 
       <ng-template #content>
-        <tui-data-list class="list"
-                       size="l">
-          <button (click)="pinColumn()"
-                  tuiOption>
+        <tui-data-list class="list" size="l">
+          <button (click)="pinColumn()" tuiOption>
             <div class="d-flex align-items-center">
               <span class="mix-icon">push_pin</span>&nbsp;
               {{ isPinned ? 'Unpin Column' : 'Pin Column' }}
             </div>
           </button>
 
-          <button (click)="parentComp.onHideColumn(params['displayName'])"
-                  tuiOption>
+          <button
+            (click)="parentComp.onHideColumn(params['displayName'])"
+            tuiOption
+          >
             <div class="d-flex align-items-center">
               <span class="mix-icon">visibility_off</span>&nbsp; Hide Column
             </div>
           </button>
 
-          <button (click)="onSortRequested('asc', $event)"
-                  tuiOption>
+          <button (click)="onSortRequested('asc', $event)" tuiOption>
             <div class="d-flex align-items-center">
               <span class="mix-icon">reorder</span>&nbsp; Sort Ascending
             </div>
           </button>
 
-          <button (click)="onSortRequested('desc', $event)"
-                  tuiOption>
+          <button (click)="onSortRequested('desc', $event)" tuiOption>
             <div class="d-flex align-items-center">
               <span class="mix-icon">sort</span>&nbsp; Sort Descending
             </div>
@@ -59,22 +63,27 @@
     </ng-container>
   </div>
 
-  <div class="ag-header-cell-label"
-       role="presentation"
-       ref="eLabel">
-    <span class="ag-header-cell-text"
-          ref="eText"></span>
-    <span class="ag-header-icon ag-header-label-icon ag-sort-order"
-          aria-hidden="true"
-          ref="eSortOrder"></span>
-    <span class="ag-header-icon ag-header-label-icon ag-sort-ascending-icon"
-          aria-hidden="true"
-          ref="eSortAsc"></span>
-    <span class="ag-header-icon ag-header-label-icon ag-sort-descending-icon"
-          aria-hidden="true"
-          ref="eSortDesc"></span>
-    <span class="ag-header-icon ag-header-label-icon ag-sort-none-icon"
-          aria-hidden="true"
-          ref="eSortNone"></span>
+  <div class="ag-header-cell-label" role="presentation" ref="eLabel">
+    <span class="ag-header-cell-text" ref="eText"></span>
+    <span
+      class="ag-header-icon ag-header-label-icon ag-sort-order"
+      aria-hidden="true"
+      ref="eSortOrder"
+    ></span>
+    <span
+      class="ag-header-icon ag-header-label-icon ag-sort-ascending-icon"
+      aria-hidden="true"
+      ref="eSortAsc"
+    ></span>
+    <span
+      class="ag-header-icon ag-header-label-icon ag-sort-descending-icon"
+      aria-hidden="true"
+      ref="eSortDesc"
+    ></span>
+    <span
+      class="ag-header-icon ag-header-label-icon ag-sort-none-icon"
+      aria-hidden="true"
+      ref="eSortNone"
+    ></span>
   </div>
 </div>
