--- a/apps/mix-cms/src/app/pages/portal/database-data/components/database-inline-select/database-inline-select.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database-data/components/database-inline-select/database-inline-select.component.html
@@ -1,28 +1,25 @@
 <ng-container *ngIf="store.vm$ | async as vm">
-  <div
-    class="database-inline-select"
-    tpPlacement="bottom-start"
-    [tp]="dbSelect"
-    tpVariation="popper"
-  >
+  <div class="database-inline-select" [tp]="dbSelect" tpVariation="popper">
     <div class="text-xl text-600">
       {{
         getSelectedDbName(vm.data, selectedItemId, selectedItemName)
-          ?.displayName
+          ?.displayName || 'Choose database'
       }}
     </div>
     <span class="mix-icon text-600 text-xxl">arrow_drop_down</span>
   </div>
 
   <ng-template #dbSelect let-hide>
-    @for (item of vm.data; track item) {
-    <div
-      class="mix-menu-item d-flex justify-content-between"
-      (click)="selectDb(item); hide()"
-    >
-      <div class="text-500">{{ item.displayName }}</div>
-      <div class="text-sub text-s">{{ item.columns.length }} cols</div>
+    <div class="popup-container">
+      @for (item of vm.data; track item) {
+      <div
+        class="mix-menu-item d-flex justify-content-between"
+        (click)="selectDb(item); hide()"
+      >
+        <div class="text-500">{{ item.displayName }}</div>
+        <div class="text-sub text-s">{{ item.columns.length }} cols</div>
+      </div>
+      }
     </div>
-    }
   </ng-template>
 </ng-container>
