--- a/libs/mix-share/src/components/main-side-menu/main-side-menu.component.scss
+++ b/libs/mix-share/src/components/main-side-menu/main-side-menu.component.scss
@@ -58,7 +58,8 @@
     }
 
     &:hover {
-      color: var(--primary-color);
+      // color: var(--primary-color);
+      opacity: 0.8;
     }
 
     &:first-of-type {
