feat(): update rich text editor

--- a/libs/mix-ui/src/base/formly-control-layout/formly-control-layout.component.html
+++ b/libs/mix-ui/src/base/formly-control-layout/formly-control-layout.component.html
@@ -1,10 +1,10 @@
-<div class="row mb-4">
-  <div class="col-md-2">
+<div class="formly-control-item">
+  <div style="min-width: 200px">
     <span class="content-label mb-1"> {{ title }}:</span>
     <div class="content-sub-label">{{ description }}</div>
   </div>
 
-  <div class="col-md-10">
+  <div class="flex-grow-1">
     <ng-content></ng-content>
   </div>
 </div>
