feat(): update project version

--- a/libs/mix-share/src/modules/task-manage/components/project-select/project-select.component.html
+++ b/libs/mix-share/src/modules/task-manage/components/project-select/project-select.component.html
@@ -1,6 +1,8 @@
 <div class="project-select"
      [tp]="dbSelect"
-     tpVariation="popper">
+     [tpOffset]="[-10, 5]"
+     tpVariation="popper"
+     tpPlacement="bottom-start">
   <div class="text-xl text-600">
     {{
       getSelectedProjectName(project(), selectedItemId)?.projectName ||
